Updated and added more functions
